# The_AI_Observatory

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
Tarot/scraper/: maj_text_zh.json  min_text_zh.json
backend/: .env  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bacc69fd7b5_add_tarot_tables.py  5f2c4dd0c3a1_add_mbti_sessions.py  bd07a4bec1de_create_users_table.py
backend/scripts/: create_database.py  fix_images.py  seed_tarot.py  test_db_connection.py
backend/src/: __init__.py  main.py
backend/src/ai/: __init__.py  client.py  streaming.py
backend/src/auth/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/core/: __init__.py  config.py  database.py  dependencies.py  logging.py  security.py
backend/src/history/: __init__.py
backend/src/mbti/: __init__.py  models.py  prompts.py  router.py  schemas.py  service.py  type_data.py
backend/src/tarot/: __init__.py  models.py  router.py  schemas.py  service.py  spreads.py
backend/src/tarot/prompts/: __init__.py  system.txt
docs/superpowers/plans/: 2026-04-15-dark-luxury-frontend-refresh.md  2026-04-15-frontend-performance-stability.md  2026-04-15-mbti-implementation.md
docs/superpowers/specs/: 2026-04-15-dark-luxury-frontend-design.md  2026-04-16-fortune-design.md  (+2 more)
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
specs/001-ai-metaphysics-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-frontend-artistic-enhancement.md  tasks-tarot-ux-upgrade.md  tasks.md
(+51 files in other folders)
